--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@jupyterlab/codeeditor": "3.1.0-alpha.13",
     "@jupyterlab/notebook": "^3.0.11",
     "@jupyterlab/shared-models": "^3.1.0-alpha.13",
+    "@jupyterlab/ui-components": "^3.1.0-alpha.13",
+    "@lumino/widgets": "^1.23.0",
     "yjs": "^13.5.10"
   },
   "devDependencies": {
