--- a/package.json
+++ b/package.json
@@ -47,12 +47,12 @@
     "watch:labextension": "jupyter labextension watch ."
   },
   "dependencies": {
-    "@jupyterlab/application": "^3.1.0-alpha.13",
-    "@jupyterlab/cells": "^3.1.0-alpha.13",
-    "@jupyterlab/codeeditor": "3.1.0-alpha.13",
-    "@jupyterlab/notebook": "^3.0.11",
-    "@jupyterlab/shared-models": "^3.1.0-alpha.13",
-    "@jupyterlab/ui-components": "^3.1.0-alpha.13",
+    "@jupyterlab/application": "^3.1.0-beta.0",
+    "@jupyterlab/cells": "^3.1.0-beta.0",
+    "@jupyterlab/codeeditor": "^3.1.0-beta.0",
+    "@jupyterlab/notebook": "^3.1.0-beta.0",
+    "@jupyterlab/shared-models": "^3.1.0-beta.0",
+    "@jupyterlab/ui-components": "^3.1.0-beta.0",
     "@lumino/widgets": "^1.23.0",
     "yjs": "^13.5.10"
   },
