--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,6 +9,7 @@ include ts*.json
 include yarn.lock
 
 exclude lint-staged.config.js
+exclude Press_Release.md
 
 graft jupyterlab_chat/labextension
 
