--- a/package.json
+++ b/package.json
@@ -47,13 +47,14 @@
     "watch:labextension": "jupyter labextension watch ."
   },
   "dependencies": {
-    "@jupyterlab/application": "^3.1.0-beta.2",
-    "@jupyterlab/cells": "^3.1.0-beta.2",
-    "@jupyterlab/codeeditor": "^3.1.0-beta.2",
-    "@jupyterlab/notebook": "^3.1.0-beta.2",
-    "@jupyterlab/shared-models": "^3.1.0-beta.2",
-    "@jupyterlab/ui-components": "^3.1.0-beta.2",
+    "@jupyterlab/application": "^3.1.0-beta.0",
+    "@jupyterlab/cells": "^3.1.0-beta.0",
+    "@jupyterlab/codeeditor": "^3.1.0-beta.0",
+    "@jupyterlab/notebook": "^3.1.0-beta.0",
+    "@jupyterlab/shared-models": "^3.1.0-beta.0",
+    "@jupyterlab/ui-components": "^3.1.0-beta.0",
     "@lumino/widgets": "^1.23.0",
+    "lib0": "^0.2.42",
     "yjs": "^13.5.11"
   },
   "devDependencies": {
