--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "@jupyterlab/shared-models": "^3.1.0-beta.0",
     "@jupyterlab/ui-components": "^3.1.0-beta.0",
     "@lumino/widgets": "^1.23.0",
-    "lib0": "^0.2.42",
-    "yjs": "^13.5.11"
+    "yjs": "13.5.11"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^3.0.0",
