--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.1",
     "rimraf": "^3.0.2",
-    "typescript": "~4.1.3"
+    "typescript": "^4.2.4"
   },
   "sideEffects": [
     "style/*.css",
