--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "@jupyterlab/shared-models": "^3.1.0-beta.2",
     "@jupyterlab/ui-components": "^3.1.0-beta.2",
     "@lumino/widgets": "^1.23.0",
-    "yjs": "^13.5.11"
+    "yjs": "^13.5.11",
+    "process": "^0.11.10"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^3.0.0",
