--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,11 +15,11 @@ jobs:
     - name: Install node
       uses: actions/setup-node@v1
       with:
-       node-version: '14.x'
+       node-version: '15.x'
     - name: Install Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.8'
+        python-version: '3.9.x'
         architecture: 'x64'
     
     
@@ -45,7 +45,7 @@ jobs:
           yarn-
     
     - name: Install dependencies
-      run: python -m pip install -U jupyterlab~=3.0 check-manifest
+      run: python -m pip install -U jupyterlab~=3.1.0b1 check-manifest
     - name: Build the extension
       run: |
         set -eux
