updated binder channels

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,12 +1,13 @@
 name: jupyterlab-comments-demo
 
 channels:
+  - conda-forge/label/jupyterlab_rc
   - conda-forge
 
 dependencies:
   # runtime
   - python >=3.8,<3.9.0a0
-  - jupyterlab >=3.1.0b1,<4.0.0a0
+  - jupyterlab >=3.1.0rc1,<4.0.0a0
   # labextension build
   - nodejs >=15,<16
   - pip
