--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,6 +10,7 @@ include yarn.lock
 
 exclude lint-staged.config.js
 exclude Press_Release.md
+exclude jupyter_config.json
 
 graft jupyterlab_comments/labextension
 
