re-added yjs; typo fixes

--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
   "jupyterlab": {
     "extension": true,
     "outputDir": "jupyterlab_comments/labextension",
-    "webpackCongig": "webpack_config.js"
+    "webpackConfig": "webpack_config.js"
   },
   "husky": {
     "hooks": {
