--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@jupyterlab/notebook": "^3.1.0-beta.0",
     "@jupyterlab/shared-models": "^3.1.0-beta.0",
     "@jupyterlab/ui-components": "^3.1.0-beta.0",
+    "@jupyterlab/rendermime": "^3.1.0-beta.0",
     "@lumino/widgets": "^1.23.0",
     "@types/codemirror": "^5.60.2",
     "codemirror": "~5.61.0",
