--- a/package.json
+++ b/package.json
@@ -47,13 +47,14 @@
     "watch:labextension": "jupyter labextension watch ."
   },
   "dependencies": {
-    "@jupyterlab/application": "^3.1.0",
-    "@jupyterlab/cells": "^3.1.0",
-    "@jupyterlab/codeeditor": "^3.1.0",
-    "@jupyterlab/codemirror": "^3.1.0",
-    "@jupyterlab/notebook": "^3.1.0",
-    "@jupyterlab/shared-models": "^3.1.0",
-    "@jupyterlab/ui-components": "^3.1.0",
+    "@jupyterlab/application": "^3.1.3",
+    "@jupyterlab/cells": "^3.1.3",
+    "@jupyterlab/codeeditor": "^3.1.3",
+    "@jupyterlab/codemirror": "^3.1.3",
+    "@jupyterlab/mathjax2": "^3.1.3",
+    "@jupyterlab/notebook": "^3.1.3",
+    "@jupyterlab/shared-models": "^3.1.3",
+    "@jupyterlab/ui-components": "^3.1.3",
     "@lumino/widgets": "^1.23.0",
     "@types/codemirror": "^5.60.2",
     "codemirror": "~5.61.0",
