--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "watch:labextension": "jupyter labextension watch ."
   },
   "dependencies": {
-    "@jupyterlab/rendermime": "^3.1.0-rc.1",
+    "@jupyterlab/rendermime": "^3.1.3",
     "@jupyterlab/services": "^6.0.9",
     "@jupyterlab/application": "^3.1.3",
     "@jupyterlab/cells": "^3.1.3",
