--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jupyterlab-comments",
   "version": "0.1.0",
-  "description": "Chat and comment in JupyterLab",
+  "description": "Comment on files JupyterLab",
   "keywords": [
     "jupyter",
     "jupyterlab",
@@ -47,14 +47,14 @@
     "watch:labextension": "jupyter labextension watch ."
   },
   "dependencies": {
-    "@jupyterlab/rendermime": "^3.1.6",
-    "@jupyterlab/services": "^6.0.9",
     "@jupyterlab/application": "^3.1.6",
     "@jupyterlab/cells": "^3.1.6",
     "@jupyterlab/codeeditor": "^3.1.6",
     "@jupyterlab/codemirror": "^3.1.6",
     "@jupyterlab/mathjax2": "^3.1.6",
     "@jupyterlab/notebook": "^3.1.6",
+    "@jupyterlab/rendermime": "^3.1.6",
+    "@jupyterlab/services": "^6.0.9",
     "@jupyterlab/shared-models": "^3.1.6",
     "@jupyterlab/ui-components": "^3.1.6",
     "@lumino/widgets": "^1.23.0",
