--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -29,3 +29,10 @@ global-exclude *.pyc
 global-exclude *.pyo
 global-exclude .git
 global-exclude .ipynb_checkpoints
+
+# Read the docs
+recursive-include docs *.bat
+recursive-include docs *.md
+recursive-include docs *.py
+recursive-include docs *.rst
+recursive-include docs Makefile
