--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -35,4 +35,5 @@ recursive-include docs *.bat
 recursive-include docs *.md
 recursive-include docs *.py
 recursive-include docs *.rst
+recursive-include docs *.txt
 recursive-include docs Makefile
