--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -8,6 +8,9 @@ dependencies:
   # runtime
   - python >=3.8,<3.9.0a0
   - jupyterlab >=3.1.0rc1,<4.0.0a0
+  - numpy
+  - scipy
+  - matplotlib
   # labextension build
   - nodejs >=15,<16
   - pip
