--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -36,6 +36,7 @@ recursive-include docs *.md
 recursive-include docs *.py
 recursive-include docs *.rst
 recursive-include docs *.txt
+recursive-include docs *.png
 recursive-include docs Makefile
 
 # demo folder
